styles(term): pre-wrap (pre not correct in View mode of card)

--- a/src/wizards/tokenSwapDealWizard/stages/termsStage/termClause/termClause.scss
+++ b/src/wizards/tokenSwapDealWizard/stages/termsStage/termClause/termClause.scss
@@ -14,7 +14,7 @@ term-clause {
       margin-top: unset;
 
       pre {
-        white-space: pre;
+        white-space: pre-wrap;
         font-family: Inter;
         font-size: $font-size3;
         line-height: 22px;
